Add component of NewsMenu.vue

--- a/vue-zhihu/static/css/iconfont.css
+++ b/vue-zhihu/static/css/iconfont.css
@@ -1,12 +1,20 @@
+// @font-face {
+//   font-family: 'iconfont';  /* project id 312179 */
+//   src: url('http://at.alicdn.com/t/font_gml4cmp91ss8aor.eot');
+//   src: url('http://at.alicdn.com/t/font_gml4cmp91ss8aor.eot?#iefix') format('embedded-opentype'),
+//   url('http://at.alicdn.com/t/font_gml4cmp91ss8aor.woff') format('woff'),
+//   url('http://at.alicdn.com/t/font_gml4cmp91ss8aor.ttf') format('truetype'),
+//   url('http://at.alicdn.com/t/font_gml4cmp91ss8aor.svg#iconfont') format('svg');
+// }
+
 @font-face {
   font-family: 'iconfont';  /* project id 312179 */
-  src: url('http://at.alicdn.com/t/font_gml4cmp91ss8aor.eot');
-  src: url('http://at.alicdn.com/t/font_gml4cmp91ss8aor.eot?#iefix') format('embedded-opentype'),
-  url('http://at.alicdn.com/t/font_gml4cmp91ss8aor.woff') format('woff'),
-  url('http://at.alicdn.com/t/font_gml4cmp91ss8aor.ttf') format('truetype'),
-  url('http://at.alicdn.com/t/font_gml4cmp91ss8aor.svg#iconfont') format('svg');
+  src: url('https://at.alicdn.com/t/font_6agpwh6h81pjh5mi.eot');
+  src: url('https://at.alicdn.com/t/font_6agpwh6h81pjh5mi.eot?#iefix') format('embedded-opentype'),
+  url('https://at.alicdn.com/t/font_6agpwh6h81pjh5mi.woff') format('woff'),
+  url('https://at.alicdn.com/t/font_6agpwh6h81pjh5mi.ttf') format('truetype'),
+  url('https://at.alicdn.com/t/font_6agpwh6h81pjh5mi.svg#iconfont') format('svg');
 }
-
 .iconfont{
     font-family:"iconfont";
     font-size:60px;
